# advent_of_code

./: .gitignore
2023/rust/: Cargo.toml  README.md  day-01.bench.txt  day-02.bench.txt  day-03.bench.txt  day-04.bench.txt  day-05.bench.txt  day-06.bench.txt  day-07.bench.txt  day-08.bench.txt  day-09.bench.txt  day-10.bench.txt  day-11.bench.txt  day-13.bench.txt  day-14.bench.txt  justfile
2023/rust/daily_template/: Cargo.toml
2023/rust/daily_template/src/: part1.rs  part2.rs
2023/rust/day-01/benches/: benchmarks.rs
2023/rust/day-01/src/: lib.rs  part1.rs  part2.rs  part2_aho.rs
2023/rust/day-02/: Cargo.toml
2023/rust/day-02/src/: errors.rs  part1.rs  part2.rs
2023/rust/day-03/: Cargo.toml
2023/rust/day-03/src/: part1.rs  part2.rs
2023/rust/day-04/: Cargo.toml
2023/rust/day-04/src/: part1.rs  part2.rs
2023/rust/day-05/: Cargo.toml
2023/rust/day-05/benches/: benchmarks.rs
2023/rust/day-05/src/: lib.rs  part1_binary_search.rs  part1_btree.rs  part2_binary_search.rs  part2_btree.rs
2023/rust/day-06/: Cargo.toml
2023/rust/day-06/benches/: benchmarks.rs
2023/rust/day-06/src/: lib.rs  part1.rs  part2.rs
2023/rust/day-07/: Cargo.toml
2023/rust/day-07/src/: part1.rs  part2.rs
2023/rust/day-08/: Cargo.toml
2023/rust/day-08/src/: part1.rs  part2.rs
2023/rust/day-09/: Cargo.toml
2023/rust/day-09/src/: part1.rs  part2.rs
2023/rust/day-10/: Cargo.toml
2023/rust/day-10/src/: part1.rs  part2.rs
2023/rust/day-11/: Cargo.toml
2023/rust/day-11/benches/: benchmarks.rs
2023/rust/day-13/: Cargo.toml
2023/rust/day-14/: Cargo.toml
(+10 files in other folders)
